@startuml basdat_movie_relational_model
' Relational Model for basdat_movie
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false
skinparam BackgroundColor White
skinparam ArrowColor #1E3A8A
skinparam ArrowThickness 1.5
skinparam Class {
  BackgroundColor White
  BorderColor #1E3A8A
  FontColor #0F172A
}
hide circle
hide methods
hide stereotypes

' Helpers for visual cues
!define PK(x) <b><color:#1E40AF>x</color></b>
!define FK(x) <u><color:#2563EB>x</color></u>
!define NN(x) <color:#0EA5E9>x</color>

entity "Paket_Langganan" as Paket_Langganan {
  PK(nama_paket) : VARCHAR(50)
  --
  harga_bulanan : DECIMAL(10,2)
  maks_resolusi : VARCHAR(20)
  maks_perangkat : INT
}

entity "Kartu_Kredit" as Kartu_Kredit {
  PK(nomor_kartu) : VARCHAR(19)
  --
  jenis : VARCHAR(50)
  empat_digit_nomor : VARCHAR(4)
  tanggal_kadaluarsa : DATE
}

entity "Pelanggan" as Pelanggan {
  PK(email) : VARCHAR(100)
  --
  nama_lengkap : VARCHAR(100)
  tanggal_lahir : DATE
  FK(nama_paket) : VARCHAR(50)
  FK(nomor_kartu) : VARCHAR(19) (NULLABLE)
}

entity "Transaksi" as Transaksi {
  PK(id_transaksi) : INT (AUTO_INCREMENT)
  --
  tanggal_pembayaran : DATE
  biaya_tagihan : DECIMAL(10,2)
  status : ENUM('Berhasil','Menunggu','Gagal')
  FK(email_pelanggan) : VARCHAR(100)
}

entity "Konten" as Konten {
  PK(judul) : VARCHAR(255)
  --
  sinopsis : TEXT
  tahun_rilis : YEAR
  rating_usia : VARCHAR(5)
  NN(type) : ENUM('Film','Serial_TV')
}

entity "Film" as Film {
  PK(judul) : VARCHAR(255)
  --
  durasi : INT
  sutradara : VARCHAR(100)
}

entity "Serial_TV" as Serial_TV {
  PK(judul) : VARCHAR(255)
  --
  total_season : INT
}

entity "Episode" as Episode {
  PK(judul_serial) : VARCHAR(255)
  PK(nomor_season) : INT
  PK(nomor_urut_episode) : INT
  --
  judul_episode : VARCHAR(255)
  sinopsis : TEXT
  durasi : INT
}

entity "Aktor" as Aktor {
  PK(nama_lengkap) : VARCHAR(100)
  --
  tanggal_lahir : DATE
  negara_asal : VARCHAR(50)
}

entity "Genre" as Genre {
  PK(genre_id) : INT (AUTO_INCREMENT)
  --
  nama_genre : VARCHAR(50) (UNIQUE)
}

entity "Genre_Konten" as Genre_Konten {
  PK(judul_konten) : VARCHAR(255)
  PK(genre_id) : INT
}

entity "Peran" as Peran {
  PK(nama_aktor) : VARCHAR(100)
  PK(judul_konten) : VARCHAR(255)
  --
  peran : VARCHAR(50)
}

entity "Audio" as Audio {
  PK(judul_konten) : VARCHAR(255)
  PK(bahasa_audio) : VARCHAR(50)
}

entity "Subtitle" as Subtitle {
  PK(judul_konten) : VARCHAR(255)
  PK(bahasa_subtitle) : VARCHAR(50)
}

entity "Profil" as Profil {
  PK(email_pelanggan) : VARCHAR(100)
  PK(nama) : VARCHAR(50)
  --
  kategori_usia : VARCHAR(20)
}

entity "Menonton" as Menonton {
  PK(email_pelanggan) : VARCHAR(100)
  PK(nama_profil) : VARCHAR(50)
  PK(judul_konten) : VARCHAR(255)
  --
  waktu_terakhir : DATETIME
  posisi_terakhir : INT
}

entity "Rating" as Rating {
  PK(email_pelanggan) : VARCHAR(100)
  PK(nama_profil) : VARCHAR(50)
  PK(judul_konten) : VARCHAR(255)
  --
  skor : INT CHECK 1..5
  komentar : TEXT
}

' Relationships (crow's foot)
Paket_Langganan ||--o{ Pelanggan : fk_pelanggan_paket\n(nama_paket)
Kartu_Kredit ||--o{ Pelanggan : fk_pelanggan_kartu\n(nomor_kartu)

Pelanggan ||--o{ Profil : memiliki
Pelanggan ||--o{ Transaksi : melakukan

' Specialization from Konten
Konten |o--|| Film : is-a
Konten |o--|| Serial_TV : is-a

Serial_TV ||--o{ Episode : memiliki\n(judul_serial)

' M:N via associative entities
Konten ||--o{ Genre_Konten
Genre ||--o{ Genre_Konten

Aktor ||--o{ Peran
Konten ||--o{ Peran

' One-to-many language options
Konten ||--o{ Audio
Konten ||--o{ Subtitle

' Watching and rating relations (weak/associative)
Profil ||--o{ Menonton
Konten ||--o{ Menonton

Profil ||--o{ Rating
Konten ||--o{ Rating

@enduml
